Chromium compile of WebDatabase.cpp fails without SQL_DATABASE https://bugs.webkit.org/show_bug.cgi?id=84212

Patch by Myles Maxfield <mmaxfield@google.com> on 2012-04-18
Reviewed by Kentaro Hara.

* src/WebDatabase.cpp:
(WebCore::AbstractDatabase::isSyncDatabase):

Canonical link: https://commits.webkit.org/101789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114561 268f45cc-cd09-0410-ab3c-d52691b4dbfc